# pgdiff

./: .env.dist  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: diff.rs  errors.rs  inspect.rs  lib.rs  main.rs
tests/: db1.sql  db2.sql  diff.rs  diff.sql  init.sql  new.sql  old.sql
