[package]
name = "pgdiff"
version = "0.1.0"
edition = "2021"
description = "Postgresql schema diff tool"
repository = "https://github.com/sanpii/pgdiff"
license = "MIT"

[dependencies]
derive-deref-rs = "0.1"
thiserror = "2.0"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.elephantry]
version = "4.0"
features = ["inspect"]

[dev-dependencies]
console = "0.15"
similar = "2.2"

[dev-dependencies.envir]
version = "0.4"
default-features = false
features = ["dotenv", "serde"]
