[package]
name = "pgdiff"
version = "0.1.0"
edition = "2024"
description = "Postgresql schema diff tool"
repository = "https://github.com/sanpii/pgdiff"
license = "MIT"

[dependencies]
derive-deref-rs = "0.1"
thiserror = "2.0"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.elephantry]
version = "5.0"
features = ["inspect"]

[dev-dependencies]
console = "0.16"
similar = "3.0"

[dev-dependencies.envir]
version = "1.3"
default-features = false
features = ["derive", "dotenv"]
